--- a/driving-day-app-frontend/src/index.css
+++ b/driving-day-app-frontend/src/index.css
@@ -16,3 +16,15 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@layer base {
+  p {
+    font-family: "Geist Mono", monospace;
+    font-size: 16px;
+  }
+
+  a {
+    font-family: "Geist Mono", monospace;
+    font-size: 16px;
+  }
+}
