feat: Working on Upload Files page

--- a/driving-day-app-frontend/src/index.css
+++ b/driving-day-app-frontend/src/index.css
@@ -27,4 +27,9 @@ code {
     font-family: "Geist Mono", monospace;
     font-size: 16px;
   }
+
+  h1 {
+    font-family: "Geist Mono", monospace;
+    font-size: 48px !important;
+  }
 }
