feat: Created Frontend components for file upload

--- a/driving-day-app-frontend/src/index.css
+++ b/driving-day-app-frontend/src/index.css
@@ -18,7 +18,7 @@ code {
 }
 
 @layer base {
-  p {
+  /* p {
     font-family: "Geist Mono", monospace;
     font-size: 16px;
   }
@@ -32,4 +32,9 @@ code {
     font-family: "Geist Mono", monospace;
     font-size: 48px !important;
   }
+
+  button {
+    background-color: #24a0ed;
+
+  } */
 }
