feat: Properly linked input items with backend

--- a/driving-day-app-frontend/src/components/upload-components/UploadComponent.css
+++ b/driving-day-app-frontend/src/components/upload-components/UploadComponent.css
@@ -15,3 +15,17 @@
 .driver-option {
     color: #24a0ed;
 }
+
+.disabled-upload-button,
+.upload-button {
+    background-color: #24a0ed;
+    color: white;
+    padding: 0.5rem 1rem;
+    border-radius: 0.5rem;
+    width: 9rem;
+}
+
+.upload-button:hover {
+    animation: fadeIn 0.5s;
+    opacity: 0.75;
+}
