feat: Created select-elements to be able to toggle vertical/horizontal labels

--- a/driving-day-app-frontend/src/pages/layout/Layout.css
+++ b/driving-day-app-frontend/src/pages/layout/Layout.css
@@ -33,4 +33,8 @@
         font-size: 48px; */
         @apply mb-6 text-2xl font-semibold;
     }
+
+    select, input{
+        @apply focus:outline-none focus:ring-2 focus:ring-blue-600 focus:border-transparent;
+    }
 }
